--- a/copyv86.html
+++ b/copyv86.html
@@ -171,9 +171,7 @@ body {font-family: Arial;}
   <div class="tab">
     <button class="tablinks" onclick="openMenu(event, 'Desktop')"><div class="tooltip">🏠Home<span class="tooltiptext">Home Screen</span></div></button>
     <button class="tablinks" onclick="openMenu(event, 'About')"><div class="tooltip">📀myDonut<span class="tooltiptext">View Donut Info</span></div></button>
-    <button class="tablinks" onclick="openMenu(event, 'Apps')"><div class="tooltip">💽Apps<span class="tooltiptext">All applications</span></div></button>
-    <button class="tablinks" onclick="openMenu(event, 'System')"><div class="tooltip">🖥️GPU<span class="tooltiptext">View GPU Info</span></div></button>
-  </div>
+    <button class="tablinks" onclick="openMenu(event, 'Apps')"><div class="tooltip">💽Apps<span class="tooltiptext">All applications</span></div></button></div>
 
 <div class="bg-text">
   
@@ -193,8 +191,8 @@ body {font-family: Arial;}
   <h1>📀</h1><p><b>Donut</b>WebUI Velocity</p>
   <p><img src="Velocity.jpg" alt="Velocity" width="100" height="100"></p>
   <p>Velocity</p>
-  <p>2K23 R5</p>
-  <p><code>2310.03</code></p>
+  <p>2K24</p>
+  <p><code>2401.01</code></p>
 
  
 
@@ -206,12 +204,6 @@ body {font-family: Arial;}
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
-</div>
-
-<div id="System" class="tabcontent">
-  <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-  <h1>GPU</h1>
-  <iframe src="sysmon.html" style="width:100%;height:400;"></iframe>
 </div>
 
 <div id="Apps" class="tabcontent">
