--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Donut WebUI Velocity 2K23 R5</title>
+<title>Donut WebUI Velocity 2K24</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   .tooltip {
@@ -169,9 +169,7 @@ body {font-family: Arial;}
   <div class="tab">
   <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen"><div class="tooltip">🏠Home<span class="tooltiptext">Home Screen</span></div></button>
   <button class="tablinks" onclick="openMenu(event, 'About')"><div class="tooltip">📀myDonut<span class="tooltiptext">View Donut Info</span></div></button>
-  <button class="tablinks" onclick="openMenu(event, 'Apps')"><div class="tooltip">💽Apps<span class="tooltiptext">All Apps</span></div></button>
-  <button class="tablinks" onclick="openMenu(event, 'System')"><div class="tooltip">🖥️GPU<span class="tooltiptext">View GPU Info</span></div></button>
-</div>
+  <button class="tablinks" onclick="openMenu(event, 'Apps')"><div class="tooltip">💽Apps<span class="tooltiptext">All Apps</span></div></button></div>
 
 <div class="bg-text">
 <div id="Desktop" class="tabcontent">
@@ -187,8 +185,8 @@ body {font-family: Arial;}
   <p><img src="Velocity.jpg" alt="Velocity" width="100" height="100"></p>
   <p>Velocity</p>
 
-  <p>2K23 R5</p>
-  <p><code>2310.03</code></p>
+  <p>2K24</p>
+  <p><code>2401.01</code></p>
 
 
   <button type="button" class="collapsible">What's New in Velocity? 🔽</button>
@@ -199,13 +197,6 @@ body {font-family: Arial;}
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
 </div>
-
-<div id="System" class="tabcontent">
-  <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-  <h1>GPU</h1>
-  <iframe src="sysmon.html" style="width:100%;height:400;" > </iframe>
-</div>
-
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
